<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/sh.siava.pixelxpert.ui.preferencesearch">

	<sh.siava.pixelxpert.ui.preferences.IllustrationPreference
		android:key="package_manager_illustration"
		app:lottie_rawRes="@raw/package_manager"
		search:ignore="true" />

	<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="PM_AllowMismatchedSignature"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/pm_bypass_signature_title"
		app:iconSpaceReserved="false" />

	<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="PM_AllowDowngrade"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/pm_allow_downgrade_title"
		app:iconSpaceReserved="false" />

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/pm_installer_redirect_category"
		app:iconSpaceReserved="false">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_InstallerRedirectEnabled"
			android:summary="@string/pm_installer_redirect_summary"
			android:title="@string/pm_installer_redirect_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.AppListPreference
			android:defaultValue=""
			android:key="PM_InstallerRedirectTarget"
			android:title="@string/pm_installer_target_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_ForceExplicitInstaller"
			android:summary="@string/pm_force_explicit_installer_summary"
			android:title="@string/pm_force_explicit_installer_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_InterceptSessionInstall"
			android:summary="@string/pm_intercept_session_summary"
			android:title="@string/pm_intercept_session_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_FixSessionPermissions"
			android:summary="@string/pm_fix_session_permissions_summary"
			android:title="@string/pm_fix_session_permissions_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_InterceptUninstall"
			android:summary="@string/pm_intercept_uninstall_summary"
			android:title="@string/pm_intercept_uninstall_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="true"
			android:key="PM_UninstallFollowInstaller"
			android:title="@string/pm_uninstall_follow_installer_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.AppListPreference
			android:defaultValue=""
			android:key="PM_UninstallerRedirectTarget"
			android:title="@string/pm_uninstaller_target_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/pm_advanced_category"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_AllowExactSignatureMismatch"
			android:summary="@string/pm_exact_signature_summary"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/pm_exact_signature_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="PM_AllowSharedUidSignatureMismatch"
			android:summary="@string/pm_shared_uid_summary"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/pm_shared_uid_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/app_info_enhancements_category"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="appInfoShowVersionCode"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/app_info_show_version_code_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="appInfoAllowDisableUserApps"
			android:summary="@string/app_info_allow_disable_user_apps_summary"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/app_info_allow_disable_user_apps_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

</PreferenceScreen>
